--- a/package.json
+++ b/package.json
@@ -20,17 +20,15 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "@fortawesome/angular-fontawesome": "^0.12.1",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@ngx-formly/bootstrap": "^6.0.0",
     "@ngx-formly/core": "^6.0.0",
     "@popperjs/core": "^2.11.6",
     "@tinymce/tinymce-angular": "^7.0.0",
     "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "fortawesome": "^0.0.1-security",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.9.3",
     "rxjs": "~7.8.0",
