--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.11.6",
     "@tinymce/tinymce-angular": "^7.0.0",
     "bootstrap": "^5.2.3",
+    "animate.css": "^4.1.1",
     "font-awesome": "^4.7.0",
     "fortawesome": "^0.0.1-security",
     "hammerjs": "^2.0.8",
@@ -41,6 +42,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
     "@ngx-formly/schematics": "^6.1.3",
+    "@storybook/addon-a11y": "^7.0.5",
     "@storybook/addon-essentials": "^7.0.5",
     "@storybook/addon-interactions": "^7.0.5",
     "@storybook/addon-links": "^7.0.5",
@@ -57,6 +59,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.5",
+    "storybook-preset-inline-svg": "^1.0.1",
     "typescript": "~4.9.4"
   }
 }
