--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" },
+              { "glob": "**/*", "input": "node_modules/leaflet/dist/images", "output": "assets/"},
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss",
