--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@asymmetrik/ngx-leaflet": "^15.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@ngx-formly/bootstrap": "^6.0.0",
     "@ngx-formly/core": "^6.0.0",
     "@popperjs/core": "^2.11.6",
     "@tinymce/tinymce-angular": "^7.0.0",
-    "@types/leaflet": "^1.9.3",
-    "bootstrap": "^5.2.3",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "fortawesome": "^0.0.1-security",
     "hammerjs": "^2.0.8",
@@ -51,6 +51,7 @@
     "@storybook/blocks": "^7.0.5",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
