--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fortawesome": "^0.0.1-security",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
