--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,11 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "leaflet"
+            ]
           },
           "configurations": {
             "production": {
