--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
               "src/styles.scss",
               "node_modules/animate.css/animate.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/plyr/dist/plyr.css"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
