--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
+    "plyr": "^3.7.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
