--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@asymmetrik/ngx-leaflet": "^15.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@ngrx/store": "^15.4.0",
     "@ngx-formly/bootstrap": "^6.0.0",
     "@ngx-formly/core": "^6.0.0",
     "@popperjs/core": "^2.11.6",
