--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
+    "@ngrx/schematics": "^15.4.0",
     "@ngx-formly/schematics": "^6.1.3",
     "@storybook/addon-a11y": "^7.0.5",
     "@storybook/addon-essentials": "^7.0.5",
