--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -1,30 +1,29 @@
-name: Deploy Storybook
-
+name: Storybook
 on:
   push:
     branches:
-      - main
+      - main # if any push happens on branch `main`, run this workflow. You could also add `paths` to detect changes in specific folder
 
 permissions:
   contents: write
   pages: write
   id-token: write
   
+  
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Install dependencies
-        run: npm install
+      - name: Checkout
+        uses: actions/checkout@v2.3.1
 
-      - name: Build Storybook
-        run: npm run build-storybook
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build-storybook
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./storybook-static
+          branch: gh-pages
+          folder: storybook-static # output folder from `npm run build-storybook`
