--- a/package.json
+++ b/package.json
@@ -47,15 +47,16 @@
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
+    "@chromatic-com/storybook": "^1.5.0",
     "@ngrx/schematics": "^15.4.0",
     "@ngx-formly/schematics": "^6.1.3",
-    "@storybook/addon-a11y": "^7.0.5",
-    "@storybook/addon-essentials": "^7.0.5",
-    "@storybook/addon-interactions": "^7.0.5",
-    "@storybook/addon-links": "^7.0.5",
-    "@storybook/angular": "^7.0.5",
-    "@storybook/blocks": "^7.0.5",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/addon-a11y": "^8.1.10",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/angular": "^8.1.10",
+    "@storybook/blocks": "^8.1.10",
+    "@storybook/test": "^8.1.10",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.5.0",
@@ -64,9 +65,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.0.5",
+    "storybook": "^8.1.10",
     "storybook-preset-inline-svg": "^1.0.1",
     "typescript": "~4.9.4"
   }
