--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
-    "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
-    "@ngrx/effects": "^15.4.0",
-    "@ngrx/router-store": "^15.4.0",
-    "@ngrx/store": "^15.4.0",
+    "@ng-bootstrap/ng-bootstrap": "~15.0.0",
+    "@ngrx/effects": "^16.0.0",
+    "@ngrx/router-store": "^16.0.0",
+    "@ngrx/store": "^16.0.0",
     "@ngx-formly/bootstrap": "^6.0.0",
     "@ngx-formly/core": "^6.0.0",
     "@popperjs/core": "^2.11.6",
@@ -40,13 +40,13 @@
     "plyr": "^3.7.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.6",
-    "@angular/cli": "~15.1.6",
-    "@angular/compiler-cli": "^15.1.0",
-    "@angular/localize": "^15.1.0",
+    "@angular-devkit/build-angular": "^16.2.14",
+    "@angular/cli": "~16.2.14",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/localize": "^16.2.12",
     "@chromatic-com/storybook": "^1.5.0",
     "@ngrx/schematics": "^15.4.0",
     "@ngx-formly/schematics": "^6.1.3",
