--- a/angular.json
+++ b/angular.json
@@ -92,10 +92,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "nimstoryfont-gui:build:production"
+              "buildTarget": "nimstoryfont-gui:build:production"
             },
             "development": {
-              "browserTarget": "nimstoryfont-gui:build:development"
+              "buildTarget": "nimstoryfont-gui:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -103,7 +103,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "nimstoryfont-gui:build"
+            "buildTarget": "nimstoryfont-gui:build"
           }
         },
         "test": {
