--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "~17.0.0",
     "@ngrx/effects": "^18.0.0",
     "@ngrx/router-store": "^18.0.0",
+    "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^18.0.0",
     "@ngx-formly/bootstrap": "^6.0.0",
     "@ngx-formly/core": "^6.0.0",
