--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,15 +20,13 @@
     "module": "ES2022",
     "skipLibCheck": true,
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
+    "fullTemplateTypeCheck": true
   }
 }
