--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@ngrx/router-store": "^18.0.0",
     "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^18.0.0",
-    "@ngx-formly/bootstrap": "^6.0.0",
-    "@ngx-formly/core": "^6.0.0",
+    "@ngx-formly/bootstrap": "^6.3.7",
+    "@ngx-formly/core": "^6.3.7",
     "@popperjs/core": "^2.11.6",
     "@tinymce/tinymce-angular": "^7.0.0",
     "animate.css": "^4.1.1",
@@ -37,7 +37,6 @@
     "fortawesome": "^0.0.1-security",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.9.3",
-    "lodash": "^4.17.21",
     "plyr": "^3.7.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -66,6 +65,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^3.3.3",
     "storybook": "^8.1.10",
     "storybook-preset-inline-svg": "^1.0.1",
     "typescript": "~5.5.4"
