--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@asymmetrik/ngx-leaflet": "^18.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "~17.0.0",
+    "@ngrx/component-store": "^18.1.0",
     "@ngrx/effects": "^18.0.0",
     "@ngrx/router-store": "^18.0.0",
     "@ngrx/signals": "^18.0.2",
