--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@angular/platform-browser-dynamic": "^18.2.5",
     "@angular/router": "^18.2.5",
     "@asymmetrik/ngx-leaflet": "^18.0.0",
-    "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "~17.0.0",
     "@ngrx/component-store": "^18.1.0",
     "@ngrx/effects": "^18.0.0",
+    "@ngrx/operators": "^18.1.1",
     "@ngrx/router-store": "^18.0.0",
     "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^18.0.0",
@@ -34,8 +34,6 @@
     "@tinymce/tinymce-angular": "^7.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
-    "font-awesome": "^4.7.0",
-    "fortawesome": "^0.0.1-security",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.9.3",
     "plyr": "^3.7.8",
