--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.5",
     "@angular/platform-browser-dynamic": "^18.2.5",
     "@angular/router": "^18.2.5",
+    "@angular/service-worker": "^18.2.5",
     "@asymmetrik/ngx-leaflet": "^18.0.0",
     "@ng-bootstrap/ng-bootstrap": "~17.0.0",
     "@ngrx/operators": "^18.1.1",
