--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/angular": "^8.3.5",
     "@storybook/blocks": "^8.3.5",
     "@storybook/test": "^8.3.5",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.5.0",
