Start proxying requests

--- a/angular.json
+++ b/angular.json
@@ -109,6 +109,9 @@
               "buildTarget": "nimstoryfont-gui:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "proxy-config.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
