--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "startNoHMR": "ng serve --no-hmr",
     "build": "NG_BUILD_OPTIMIZE_CHUNKS=1 ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
