Get SSR running

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,6 @@
           "options": {
             "outputPath": {
               "base": "dist/nimstoryfont-gui",
-              "browser": "",
               "media": "assets"
             },
             "index": "src/index.html",
@@ -74,6 +73,11 @@
               "includePaths": [
                 "."
               ]
+            },
+            "server": "src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
             }
           },
           "configurations": {
