--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "storybook": "ng run nimstoryfont-gui:storybook",
-    "build-storybook": "ng run nimstoryfont-gui:build-storybook"
+    "build-storybook": "ng run nimstoryfont-gui:build-storybook",
+    "serve:ssr:nimstoryfont-gui": "node dist/nimstoryfont-gui/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +21,10 @@
     "@angular/forms": "^19.1.6",
     "@angular/platform-browser": "^19.1.6",
     "@angular/platform-browser-dynamic": "^19.1.6",
+    "@angular/platform-server": "^19.1.6",
     "@angular/router": "^19.1.6",
     "@angular/service-worker": "^19.1.6",
+    "@angular/ssr": "^19.1.7",
     "@bluehalo/ngx-leaflet": "^19.0.0",
     "@ng-bootstrap/ng-bootstrap": "~18.0.0",
     "@ngrx/operators": "^19.0.1",
@@ -32,6 +35,7 @@
     "@tinymce/tinymce-angular": "^7.0.0",
     "bootstrap": "^5.2.3",
     "d3": "^7.9.0",
+    "express": "^4.18.2",
     "leaflet": "^1.9.3",
     "plyr": "^3.7.8",
     "rxjs": "~7.8.0",
@@ -54,8 +58,10 @@
     "@storybook/blocks": "^8.4.5",
     "@storybook/test": "^8.4.5",
     "@types/d3": "^7.4.3",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
