--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,8 @@
           "style": "scss",
           "changeDetection": "OnPush",
           "standalone": true,
-          "skipTests": true
+          "skipTests": true,
+          "exportDefault": true
         },
         "@schematics/angular:directive": {
           "skipTests": true
@@ -134,9 +135,7 @@
               "buildTarget": "nimstoryfont-gui:build:development"
             }
           },
-          "options": {
-            "proxyConfig": "proxy-config.json"
-          },
+          "options": {},
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
