--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "storybook": "ng run nimstoryfont-gui:storybook",
-    "build-storybook": "ng run nimstoryfont-gui:build-storybook"
+    "build-storybook": "ng run nimstoryfont-gui:build-storybook",
+    "source-map-explorer": "source-map-explorer dist/nimstoryfont-gui/*.js"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "source-map-explorer": "^2.5.3",
     "@angular-devkit/build-angular": "^19.1.7",
     "@angular/cli": "~19.1.7",
     "@angular/compiler-cli": "^19.1.6",
