Add source map explorer for size optimization

--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,8 @@
           },
           "configurations": {
             "production": {
+              "sourceMap": true,
+              "namedChunks": true,
               "budgets": [
                 {
                   "type": "initial",
