--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "storybook": "ng run nimstoryfont-gui:storybook",
     "build-storybook": "ng run nimstoryfont-gui:build-storybook",
-    "source-map-explorer": "source-map-explorer dist/nimstoryfont-gui/*.js"
+    "source-map-explorer": "npm run build && source-map-explorer dist/nimstoryfont-gui/*.js"
   },
   "private": true,
   "dependencies": {
