--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.6",
+    "@angular/cdk": "^19.2.2",
     "@angular/common": "^19.1.6",
     "@angular/compiler": "^19.1.6",
     "@angular/core": "^19.1.6",
@@ -40,7 +41,6 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "source-map-explorer": "^2.5.3",
     "@angular-devkit/build-angular": "^19.1.7",
     "@angular/cli": "~19.1.7",
     "@angular/compiler-cli": "^19.1.6",
@@ -65,6 +65,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^3.3.3",
+    "source-map-explorer": "^2.5.3",
     "storybook": "^8.4.5",
     "storybook-preset-inline-svg": "^1.0.1",
     "typescript": "~5.5.4"
